# phonic-examples

./: .gitignore  README.md  ngrok_tunneling.mdx
01-quick-start/node/: README.md  package-lock.json  package.json  tsconfig.json
01-quick-start/python/: README.md  create_agent.py  outbound_call.py  pyproject.toml
02-conversation-webhook/node/: create-agent.ts  index.ts  package-lock.json  package.json
02-conversation-webhook/python/: README.md  create_agent.py  outbound_call.py  pyproject.toml  server.py
03-conversation-websocket/node/: outbound-call.ts  package-lock.json  package.json  server.ts
03-conversation-websocket/python/: README.md  outbound_call.py  pyproject.toml  server.py
04-conversation-websocket-tools/node/: create-tool.ts  index.ts  outbound-call.ts  package-lock.json  package.json  phonic.ts  tsconfig.json
04-conversation-websocket-tools/python/: README.md  outbound_call.py  pyproject.toml  server.py
05-telnyx-media-streaming/node/: README.md  env-vars.ts  outbound-call.ts  package.json  server.ts  types.ts
05-telnyx-media-streaming/python/: README.md  create_agent.py  outbound_call.py  pyproject.toml  server.py
conversation-demo/: .dockerignore  .gitignore
conversation-webhook/python/: README.md  create_agent.py  outbound_call.py  pyproject.toml  server.py
conversation-websocket/python/: README.md  create_agent.py  outbound_call.py  pyproject.toml  server.py
node/: README.md  package-lock.json  package.json
python/: README.md  pyproject.toml
python_websocket_tools/: README.md  call_tool.py  constants.py  create_agent.py  create_tool.py  requirements.txt  server.py
websocket-tools/: .gitignore  README.md  package.json  tsconfig.json
(+99 files in other folders)
