[project]
name = "telnyx-media-streaming-python"
version = "0.1.0"
description = "Phonic Examples: Telnyx Media Streaming Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==25.9.0",
    "fastapi==0.117.1",
    "httpx==0.28.1",
    "isort==6.0.1",
    "phonic==0.32.9",
    "python-dotenv==1.1.1",
    "uvicorn==0.32.0",
]
